--- a/frontendapp/src/pages/homepage/home.css
+++ b/frontendapp/src/pages/homepage/home.css
@@ -29,6 +29,7 @@
     height: 7vh;
     margin-bottom: 10px;
     margin-right: 80px;
+    cursor: pointer;
 }
 
 .button-nav {
@@ -145,9 +146,9 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 100px;
+    height: 220px;
     margin-top: -15px;
-    margin-right: 250px;
+    margin-left: 90px;
 }
 
 .controw3 {
@@ -155,7 +156,7 @@
     flex-direction: row;
     justify-content: center;
     height: 100px;
-    margin-top: 90px;
+    margin-top: -30px;
     margin-right: 230px;
 }
 
@@ -176,31 +177,24 @@
 
 .background {
     display: flex;
-    align-items: space-between;
     background-color: #000000;
-    width: 100%;
     margin-top: 350px;
     height: 75vh;
+    flex-direction: space-between;
 }
 
 .title {
+    display: flex;
     color: #E18700;
     font-weight: 400;
     margin-top: 90px;
-}
-
-.leftside {
-    display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: 100%;
 }
 
 .texting {
-    width: 50%;
+    font-size: 14px;
     color: white;
-    margin-right: 10px;
 }
 
 .rect {
@@ -213,15 +207,26 @@
 
 .background2 {
     background-color: #F6F2ED;
+    width: 100%;
     height: 120vh;
-}
-
-.map {
-    margin-top: -222px;
 }
 
 .footer {
     background-color: #000000;
     height: 50vh;
     width: 100%;
+}
+
+.leftside {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 50vh;
+}
+
+.row {
+    margin-top: 250px;
+    width: 350px;
+    height: 100%;
+    margin-left: -15px;
 }
