--- a/frontendapp/src/pages/homepage/home.css
+++ b/frontendapp/src/pages/homepage/home.css
@@ -1,6 +1,6 @@
 .home {
     display: flex;
-    background-color: #F6F2ED;
+    background-color: #FBFBFB;
     width: 100%;
     height: 100vh;
     flex-direction: column;
@@ -26,14 +26,15 @@
     justify-content: flex-end;
     align-self: flex-end;
     width: 30%;
-    height: 7vh;
-    margin-bottom: 10px;
+    height: 3vh;
     margin-right: 80px;
     cursor: pointer;
+    background-color: #FBFBFB;
 }
 
 .button-nav {
     cursor: pointer;
+    background-color: transparent;
     border: none;
     font-size: 15px;
     width: auto;
@@ -43,6 +44,7 @@
 
 .button-nav-blue {
     cursor: pointer;
+    background-color: transparent;
     border: none;
     font-size: 15px;
     color: #007EC6;
@@ -51,14 +53,11 @@
     margin-right: 3px;
 }
 
-.line {
-    margin-bottom: 30px;
-    font-weight: lighter;
-    font-size: 25px;
-    color: #000000;
+.p {
+    margin-top: 10px;
 }
 
-.navSocial {
+.vector {
     margin-left: 10px;
     width: 4%;
     margin-bottom: 2px;
@@ -72,26 +71,17 @@
     align-self: flex-end;
     align-self: flex-end;
     width: 30%;
-    height: 7vh;
+    height: 6vh;
+    margin-top: 20px;
     margin-right: 80px;
-}
-
-.contact {
-    border: none;
-    font-size: 15px;
-    background-color: #007EC6;
-    border-radius: 10px;
-    width: 120px;
-    height: 40px;
-    color: white;
-    cursor: pointer;
-    margin-right: 9px;
+    background-color: #FBFBFB;
 }
 
 .login {
     border-color: #007EC6;
-    font-size: 15px;
+    font-size: 14px;
     border-radius: 10px;
+    background-color: transparent;
     width: 80px;
     height: 40px;
     color: #007EC6;
@@ -101,7 +91,7 @@
 
 .register {
     border: none;
-    font-size: 15px;
+    font-size: 14px;
     background-color: black;
     border-radius: 10px;
     width: 90px;
@@ -111,122 +101,110 @@
     cursor: pointer;
 }
 
-.body {
+.containerHead {
     display: flex;
     flex-direction: column;
-    margin-top: -160px;
-}
-
-.message {
-    margin-bottom: -330px;
-}
-
-.top {
-    font-size: 270px;
-    font-family: 'Jomhuria', sans-serif;
-    font-weight: 300;
-}
-
-.top-1 {
-    font-size: 270px;
-    font-family: 'Jomhuria', sans-serif;
-    font-weight: 300;
-    color:#007EC6
-}
-
-
-.controw {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 200px;
-}
-
-.controw2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 220px;
-    margin-top: -15px;
-    margin-left: 90px;
-}
-
-.controw3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 100px;
-    margin-top: -30px;
-    margin-right: 230px;
-}
-
-.deploy {
-    font-size: 270px;
-    font-family: 'Jomhuria', sans-serif;
-    font-weight: 300;
-    color: #E18700;
-}
-
-.maintain {
-    font-size: 270px;
-    font-family: 'Jomhuria', sans-serif;
-    font-weight: 300;
-    color: #007EC6;
-    margin-left: 40px;
-}
-
-.background {
-    display: flex;
-    background-color: #000000;
-    margin-top: 350px;
-    height: 75vh;
-    flex-direction: space-between;
+    width: auto;
+    height: auto;
+    align-items: center;
+    font-family: 'Jost', sans-serif;
+    background-color: #FBFBFB;
 }
 
 .title {
+    font-size: 60px;
+}
+
+.title2 {
+    margin-top: -25px;
+    font-size: 60px;
+}
+
+.highlight {
+    color: #007EC6;
+}
+
+.subtitle {
+    margin-top: -10px;
+    color: #B3B3B3;
+    font-size: 15px;
+}
+
+.head {
+    width: 50%;
+    height: auto;
+    margin-top: 40px;
+}
+
+.containerCollaborative {
     display: flex;
-    color: #E18700;
-    font-weight: 400;
-    margin-top: 90px;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    font-family: 'Jost', sans-serif;
+    background-color: #FBFBFB;
 }
 
-.texting {
-    font-size: 14px;
-    color: white;
-}
-
-.rect {
-    margin-top: 30px;
-    width: auto;
-    height: 80%;
+.sub {
     margin-top: 60px;
-    margin-right: 100px;
 }
 
-.background2 {
-    background-color: #F6F2ED;
-    width: 100%;
-    height: 120vh;
-}
-
-.footer {
-    background-color: #000000;
-    height: 50vh;
-    width: 100%;
-}
-
-.leftside {
+.containerImg {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    height: 50vh;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: #FBFBFB;
 }
 
-.row {
-    margin-top: 250px;
-    width: 350px;
-    height: 100%;
-    margin-left: -15px;
+.text {
+    margin-left: 32px;
+    width: 12%;
+    margin-right: 30px;
+}
+
+.text-1 {
+    margin-left: 18px;
+    width: 12%;
+    margin-right: 30px;
+}
+
+.containerBase {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-content: center;
+    background-color: #FBFBFB;
+    font-family: 'Jost', sans-serif;
+}
+
+.lateral {
+    margin-top: 4%;
+    width: 30%;
+}
+
+.right {
+    display: flex;
+    align-items: flex-end;
+    margin-left: 15%;
+    margin-top: 4%;
+}
+
+.form {
+    background-color: #F0F0F0;
+    border-radius: 50px;
+    width: 467px;
+    height: 652px;
+}
+
+.lateral-1{
+    display: flex;
+    flex-direction: row;
+    margin-top: 50px;
+}
+
+.subtitle-1 {
+    color: #B3B3B3;
+    font-size: 15px;
+    margin-left: 13px;
 }
