--- a/frontendapp/src/pages/homepage/home.css
+++ b/frontendapp/src/pages/homepage/home.css
@@ -190,13 +190,6 @@
     margin-top: 4%;
 }
 
-.form {
-    background-color: #F0F0F0;
-    border-radius: 50px;
-    width: 467px;
-    height: 652px;
-}
-
 .lateral-1{
     display: flex;
     flex-direction: row;
@@ -207,4 +200,134 @@
     color: #B3B3B3;
     font-size: 15px;
     margin-left: 13px;
+}
+
+.form {
+    display: flex;
+    background-color: #F8F8F8;
+    border-radius: 50px;
+    justify-content: center;
+    width: 467px;
+    height: 652px;
+}
+
+.name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 70%;
+}
+
+.input {
+    border-radius: 20px;
+    border: none;
+    height: 30px;
+    margin-bottom: 15px;
+    box-shadow: rgb(242, 242, 242) 0px 0px 10px 1px;
+    padding-left: 10px;
+}
+
+.input-d {
+    border-radius: 20px;
+    border: none;
+    height: 130px;
+    margin-bottom: 15px;
+    box-shadow: rgb(242, 242, 242) 0px 0px 10px 1px;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
+.label {
+    margin-bottom: 2px;
+}
+
+.button {
+    background-color: black;
+    border-radius: 20px;
+    width: 45%;
+    height: 30px;
+    color: white;
+    align-self: center;
+    font-size: 13px;
+    margin-top: 10px;
+}
+
+.footer {
+    width: 100%;
+    background-color: black;
+    height: 521px;
+    justify-content: center;
+}
+
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.flateral-1{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    width: 30%;
+    margin-right: -150px;
+}
+
+.flateral-2{
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    margin-right: 120px;
+    margin-left: 30px;
+}
+
+.flateral-3{
+    display: flex;
+    flex-direction: column;
+    margin-top: 70px;
+    margin-right: 120px;
+    margin-left: 30px;
+}
+
+.image-f {
+    margin-top: 30px;
+    width: 40%;
+}
+
+.footer-t {
+    margin-top: 40px;
+    color: white;
+    font-size: 13px;
+    margin-bottom: 60px;
+    width: 50%;
+}
+
+.footer-1t {
+    margin-top: 34px;
+    color: white;
+    font-size: 13px;
+    margin-bottom: 135px;
+}
+
+.footer-2t {
+    margin-top: 32px;
+    color: white;
+    font-size: 13px;
+    margin-bottom: 135px;
+}
+
+.footer-f {
+    font-size: 18px;
+    color: white;
+}
+
+.footer-f-b{
+    font-size: 18px;
+    color: white;
+    margin-top: 40px;
+}
+
+.image-w {
+    width: 20%;
 }
